Attempted repro for task scheduler race

Bug: 730340
Change-Id: Ib0b7025a37385631634cf5b77f940d01ce858207